# docx-replace

./: .gitignore  README.md  docx-replace.py  docx_replace.py  pyproject.toml
src/: __init__.py  docx_replace_ms.py
test/: Pushkin_AS.docx  Pushkin_AS2.docx  README.md  test_app.py  test_with_docx.py
tests/: test_app.py
